--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
-  <!-- add to homescreen for ios -->
+  <!-- Add to homescreen for iOS -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
@@ -24,3 +24,4 @@
 </body>
 
 </html>
+
